--- a/metaFinal/src/view/adminPanel/UserList.fxml
+++ b/metaFinal/src/view/adminPanel/UserList.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+
 <?import javafx.scene.text.Font?>
 
 <VBox prefHeight="514.0" prefWidth="813.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.UserListController">
@@ -30,20 +32,30 @@
                         <Label styleClass="labelform" text="Image" />
                 
             </children>
+            
+            
+            
+              
+               
         </VBox>
-        <Button fx:id="bsave" layoutX="3.0" layoutY="432.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn"  text="Save">
+        
+        
+        <Button fx:id="bsave" layoutX="3.0" layoutY="432.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
            
+     
+                 
+                
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="98.0" layoutY="432.0" onAction="#updateEvent" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" text="Edit">
+        <Button fx:id="bupdate" layoutX="98.0" layoutY="432.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="189.0" layoutY="433.0" onAction="#deleteEvent" mnemonicParsing="false" prefHeight="33.0" prefWidth="71.0" styleClass="btn"  text="Delete">
+            <Button fx:id="bdelete" layoutX="189.0" layoutY="433.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
@@ -57,7 +69,9 @@
             
         </Button>
             
-           <TableView fx:id="table" onMouseClicked="#tablehandleButtonAction" layoutX="316.0" layoutY="66.0"  prefHeight="302.0" prefWidth="575.0">
+
+            
+           <TableView fx:id="table" layoutX="316.0" layoutY="66.0" onMouseClicked="#tablehandleButtonAction" prefHeight="302.0" prefWidth="575.0">
             <columns>
                 <TableColumn fx:id="uidu" prefWidth="33.0" text="ID" />
                 <TableColumn fx:id="ucin" prefWidth="82.33331298828125" text="CIN" />
