--- a/metaFinal/src/view/login_signup/login.fxml
+++ b/metaFinal/src/view/login_signup/login.fxml
@@ -10,10 +10,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="667.0" prefWidth="1224.0" style="-fx-background-color: FFFFFF;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="667.0" prefWidth="1224.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login_signup.LoginController">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="7.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="129.0" layoutY="389.0" text="Une fois MetaTrip,toujours Metatrip!" textFill="WHITE">
          <font>
             <Font size="19.0" />
@@ -21,11 +19,6 @@
       </Label>
       <AnchorPane layoutY="-2.0" prefHeight="675.0" prefWidth="522.0" style="-fx-background-color: #073258;">
          <children>
-            <ImageView fitHeight="363.0" fitWidth="406.0" layoutX="69.0" layoutY="72.0">
-               <image>
-                  <Image url="@/view/img/logo_meta.png" />
-               </image>
-            </ImageView>
             <Label layoutX="80.0" layoutY="435.0" prefHeight="50.0" prefWidth="395.0" text="Welcome to MetaTrip " textFill="#fcfcfc">
                <font>
                   <Font size="34.0" />
@@ -36,26 +29,24 @@
                   <Font name="Akhbar MT" size="18.0" />
                </font>
             </Button>
+            <ImageView fitHeight="196.0" fitWidth="220.0" layoutX="126.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="283.0" fitWidth="235.0" layoutX="119.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../272896551_284823900301309_6294383665325954873_n.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
-      <TextField layoutX="753.0" layoutY="257.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
-      <PasswordField layoutX="753.0" layoutY="342.0" prefHeight="32.0" prefWidth="277.0" promptText="Password" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
-      <Button defaultButton="true" layoutX="810.0" layoutY="435.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="163.0" style="-fx-background-color: #073258;" text="Valider" textAlignment="CENTER" textFill="WHITE" />
+      <TextField fx:id="emailIdField" layoutX="753.0" layoutY="257.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <PasswordField fx:id="passwordField" layoutX="753.0" layoutY="342.0" prefHeight="32.0" prefWidth="277.0" promptText="Password" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <Button fx:id="submitButton" defaultButton="true" layoutX="857.0" layoutY="431.0" onAction="#login" prefHeight="40" prefWidth="100" style="-fx-background-color: #073258;" text="Submit" textFill="WHITE">
+
+    </Button>
       <Label layoutX="834.0" layoutY="156.0" text="Sign in ">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <ImageView fitHeight="33.0" fitWidth="49.0" layoutX="698.0" layoutY="260.0">
-         <image>
-            <Image url="@../../../../../../Sample_User_Icon.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="33.0" fitWidth="41.0" layoutX="702.0" layoutY="341.0">
-         <image>
-            <Image url="@../../../../../../télécharger%20(3).png" />
-         </image>
-      </ImageView>
       <Hyperlink layoutX="834.0" layoutY="509.0" text="Forget Your Password?" textFill="#073258" />
    </children>
 </AnchorPane>
