--- a/metaFinal/src/view/login_signup/signup.fxml
+++ b/metaFinal/src/view/login_signup/signup.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="683.0" prefWidth="1196.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="683.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login_signup.SignupController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="8.0" prefHeight="675.0" prefWidth="522.0" style="-fx-background-color: #073258;">
          <children>
@@ -19,19 +20,26 @@
                </font>
             </Label>
             <ImageView fitHeight="196.0" fitWidth="220.0" layoutX="126.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="283.0" fitWidth="235.0" layoutX="119.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="273.0" fitWidth="310.0" layoutX="104.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../../../272896551_284823900301309_6294383665325954873_n.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <Button contentDisplay="CENTER" defaultButton="true" layoutX="810.0" layoutY="445.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #073258;" text="Sign Up" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="submitButton" onAction="#signup" contentDisplay="CENTER" defaultButton="true" layoutX="768.0" layoutY="553.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #073258;" text="Sign Up" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Akhbar MT" size="18.0" />
          </font>
       </Button>
-      <TextField fx:id="emailIdField" layoutX="763.0" layoutY="267.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
-      <TextField fx:id="emailIdField1" layoutX="763.0" layoutY="329.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Cin" layoutX="557.0" layoutY="126.0" prefHeight="28.0" prefWidth="277.0" promptText="Cin" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Nom" layoutX="883.0" layoutY="126.0" prefHeight="28.0" prefWidth="277.0" promptText="Nom" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Prenom" layoutX="557.0" layoutY="227.0" prefHeight="28.0" prefWidth="277.0" promptText="Prenom" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Tel" layoutX="883.0" layoutY="227.0" prefHeight="28.0" prefWidth="277.0" promptText="Tel" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Email" layoutX="557.0" layoutY="325.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+    
+      <TextField fx:id="Image" accessibleRole="PASSWORD_FIELD" layoutX="557.0" layoutY="431.0" prefHeight="28.0" prefWidth="277.0" promptText="Image" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <DatePicker fx:id="DateNaissance" layoutX="896.0" layoutY="431.0" promptText="DateNaissance" />
+      <PasswordField fx:id="Password" layoutX="885.0" layoutY="329.0" prefHeight="33.0" prefWidth="240.0" promptText="Password" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
    </children>
 </AnchorPane>
