--- a/metaFinal/src/view/login_signup/login.fxml
+++ b/metaFinal/src/view/login_signup/login.fxml
@@ -24,7 +24,7 @@
                   <Font size="34.0" />
                </font>
             </Label>
-            <Button contentDisplay="CENTER" defaultButton="true" layoutX="126.0" layoutY="533.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="192.0" text="Sign Up" textAlignment="CENTER" textFill="#18015e">
+            <Button contentDisplay="CENTER" onAction="#link" defaultButton="true" layoutX="126.0" layoutY="533.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="192.0" text="Sign Up" textAlignment="CENTER" textFill="#18015e">
                <font>
                   <Font name="Akhbar MT" size="18.0" />
                </font>
