--- a/metaFinal/src/view/adminPanel/VoyageORG.fxml
+++ b/metaFinal/src/view/adminPanel/VoyageORG.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox prefHeight="456.0" prefWidth="1156.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.VoyageORGController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
@@ -18,56 +17,46 @@
        
 <AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-        <VBox layoutX="46.0" layoutY="111.0" prefHeight="157.0" prefWidth="95.0" spacing="25.0">
+        <VBox layoutX="35.0" layoutY="82.0" prefHeight="157.0" prefWidth="95.0" spacing="25.0">
             <children>
                 <Label styleClass="labelform" text="IDV_ORG" />
                 <Label layoutX="10.0" layoutY="10.0" styleClass="labelform" text="Prix Billet" />
-                <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Campagnie Aérienne" />
+                <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Campagnie " />
                   <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Status" />
-                    <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="ID Voyage" />
+                    <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Voyage" />
               
                    
                 
             </children>
         </VBox>
-        <Button fx:id="bsave" layoutX="59.0" layoutY="303.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+        <Button fx:id="bsave" layoutX="42.0" layoutY="369.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="154.0" layoutY="303.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
+        <Button fx:id="bupdate" layoutX="137.0" layoutY="369.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="245.0" layoutY="304.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="228.0" layoutY="370.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="342.0" layoutY="304.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
+              <Button layoutX="325.0" layoutY="370.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             
         </Button>
-            
-           <TableView fx:id="table" layoutX="468.0" layoutY="81.0" onMouseClicked="#tablehandleButtonAction" prefHeight="290.0" prefWidth="654.0">
-            <columns>
-                <TableColumn fx:id="uidvv" prefWidth="108.0" text="IDV_ORG" />
-                <TableColumn fx:id="uprix" prefWidth="294.0" text="Prix Billet" />
-                <TableColumn fx:id="unuits" prefWidth="251.0" text="Nombre de nuitées" />
-                  <TableColumn fx:id="uetat" prefWidth="251.0" text="Status" />
-                    <TableColumn fx:id="uidv" prefWidth="251.0" text="ID Voyage" />
-            </columns>
-        </TableView>
         <Pane layoutX="96.0" layoutY="12.0" prefHeight="39.0" prefWidth="634.0">
             <children>
-                <Label layoutX="238.0" layoutY="1.0" prefHeight="10.0" prefWidth="337.0" text="LISTE DES VOYAGES" textFill="#ffc300">
+                <Label layoutX="199.0" layoutY="1.0" prefHeight="30.0" prefWidth="440.0" text="LISTE DES VOYAGES ORGANISES" textFill="#ffc300">
                     <font>
                         <Font name="Arial Bold" size="25.0" />
                     </font>
@@ -75,16 +64,24 @@
                 </Label>
             </children>
         </Pane>
-        <VBox layoutX="164.0" layoutY="111.0" prefHeight="192.0" prefWidth="247.0" spacing="15.0">
+        <VBox layoutX="164.0" layoutY="79.0" prefHeight="192.0" prefWidth="247.0" spacing="15.0">
             <children>
                             <TextField fx:id="idvo" editable="false" prefHeight="20.0" prefWidth="80.0" />
                             <TextField fx:id="prix_billet" layoutX="10.0" layoutY="10.0" />
                             <TextField fx:id="airline" layoutX="10.0" layoutY="20.0" />
                              <TextField fx:id="Nb_nuitees" layoutX="10.0" layoutY="20.0" />
                               <TextField fx:id="etatVoyage" layoutX="10.0" layoutY="20.0" />
-                               <TextField fx:id="idv" layoutX="10.0" layoutY="20.0" />
             </children>
         </VBox>
+                  <TableView layoutX="478.0" layoutY="71.0" prefHeight="289.0" prefWidth="661.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="IDV_ORG" />
+                      <TableColumn prefWidth="162.0" text="Prix_Billet" />
+                        <TableColumn prefWidth="205.0" text="Campagnie" />
+                        <TableColumn prefWidth="82.0" text="Status" />
+                        <TableColumn prefWidth="136.0" text="Voyage" />
+                    </columns>
+                  </TableView>
         
      
     </children>
